--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://profile.codersrank.io/user/5ett">Praise M-K</a>.
     </div>
   </footer>
 </body>
